<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startingPoint"
            android:layout_weight="1"
            android:textSize="25dp"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/departSpinner"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endPoint"
            android:layout_weight="1"
            android:textSize="25dp"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/arrivalSpinner"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
        <Button
            android:id="@+id/calenderPopUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/calender"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/trainBackButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/back"/>

            <Button
                android:id="@+id/trainOKButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>